[gd_scene load_steps=5 format=3 uid="uid://cemf46bnm1brm"]

[ext_resource type="Script" path="res://lp_4__2.gd" id="1_ni3vl"]
[ext_resource type="Theme" uid="uid://b16mm2uf5waty" path="res://Big_Font.tres" id="2_ej0f8"]

[sub_resource type="LabelSettings" id="LabelSettings_idms5"]
font_size = 38

[sub_resource type="LabelSettings" id="LabelSettings_8hm1h"]
font_size = 38

[node name="lp4 -2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ni3vl")

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 82.0
offset_top = 548.0
offset_right = 214.0
offset_bottom = 623.0
theme = ExtResource("2_ej0f8")
text = "Calc"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 250.0
offset_top = 557.0
offset_right = 382.0
offset_bottom = 632.0
theme = ExtResource("2_ej0f8")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 477.0
offset_top = 546.0
offset_right = 609.0
offset_bottom = 621.0
theme = ExtResource("2_ej0f8")
text = "Exit"

[node name="txtWeight" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 36.0
offset_right = 327.0
offset_bottom = 93.0

[node name="txtHeight" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 807.0
offset_top = 35.0
offset_right = 1030.0
offset_bottom = 92.0

[node name="txtWidth" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 574.0
offset_top = 36.0
offset_right = 797.0
offset_bottom = 93.0

[node name="txtLength" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 337.0
offset_top = 33.0
offset_right = 560.0
offset_bottom = 90.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 82.0
offset_top = 135.0
offset_right = 975.0
offset_bottom = 244.0
text = "enter weight in kilograms,
 length and width and height in centimeters"
label_settings = SubResource("LabelSettings_idms5")

[node name="lblOut" type="Label" parent="."]
layout_mode = 0
offset_left = 71.0
offset_top = 262.0
offset_right = 973.0
offset_bottom = 463.0
label_settings = SubResource("LabelSettings_8hm1h")
horizontal_alignment = 1

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
